<resources>
    <string name="app_name">Entregas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="endereco">Endereço</string>
    <string name="cliente">Cliente</string>
    <string name="observacao">Observação</string>
    <string name="novo">Novo produto</string>
    <string name="salvar">Salvar</string>
    <string name="entregue">Entregue:</string>
    <string name="lista_vazia">Lista vazia</string>
    <string name="nome">Nome</string>
    <string name="adicionar">adicionar</string>
</resources>
