<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro_entrega"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cleiton.final162.activities.CadastroEntrega"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:id="@+id/form_endereco"
        android:inputType="textAutoComplete"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:id="@+id/form_cliente"
        android:inputType="textPersonName|textAutoComplete"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observacao"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_obs"
        android:lines="2"
        android:inputType="textAutoCorrect|textMultiLine"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entregue"
        android:id="@+id/entregue"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:onClick="salvarEntrega"
        android:layout_gravity="center_horizontal"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lista_pe"/>

</LinearLayout>
